Removed fixed width on iphone frame

--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -86,11 +86,9 @@
 .iphone-x-frame {
     position: relative;
     overflow: hidden;
-    margin: 24px auto;
-    width: 250px;
-    height: 540px;
+    margin: 24px 16px;
     border-radius: 24px;
-    box-shadow: 0px 0px 0px 14px #444;
+    box-shadow: 0px 0px 0px 10px #666;
     background-color: #f3f3f3;
   }
 
@@ -102,7 +100,7 @@
     top: -2px;
     width: 45%;
     height: 16px;
-    background-color: #444;
+    background-color: #666;
     border-radius: 0px 0px 40px 40px;
   }
 
